# HeavyGraph

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
Common/: Param.h  util.h
Dataset/: Dataset.h
Detector/: CorrectDetector.hpp  DetectorAbstract.h  GSSDetector.hpp
GSS/: GSS.hpp
Ours/: GraphFilter.hpp  HeavyDetector.hpp
